docs/pages/versions/v55.0.0/sdk/ui/jetpack-compose/shape.mdx
---
title: 形状
description: 一个用于绘制几何形状的 Jetpack Compose Shape 组件。
sourceCodeUrl: 'https://github.com/expo/expo/tree/main/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';

Expo UI Shape 与官方 Jetpack Compose [Shapes](https://developer.android.com/develop/ui/compose/graphics/draw/shapes) API 保持一致，并提供了一组用于绘制几何图形的子组件，例如星形、圆形、矩形、胶囊形和多边形。

## 安装

<APIInstallSection />

## 用法

### 基础形状

使用 `Shape` 子组件渲染常见形状。

```tsx BasicShapesExample.tsx
import { Host, Shape, Row } from '@expo/ui/jetpack-compose';
import { size } from '@expo/ui/jetpack-compose/modifiers';

export default function BasicShapesExample() {
  return (
    <Host matchContents>
      <Row horizontalArrangement={{ spacedBy: 16 }} verticalAlignment="center">
        <Shape.Star color="#FFD700" modifiers={[size(80, 80)]} />
        <Shape.Circle radius={40} color="#4285F4" modifiers={[size(80, 80)]} />
        <Shape.Rectangle color="#34A853" modifiers={[size(80, 80)]} />
        <Shape.Pill color="#EA4335" modifiers={[size(100, 50)]} />
      </Row>
    </Host>
  );
}
```

### 带圆角的形状

使用 `cornerRounding` 和 `smoothing` 来自定义形状外观。

```tsx RoundedShapesExample.tsx
import { Host, Shape, Row } from '@expo/ui/jetpack-compose';
import { size } from '@expo/ui/jetpack-compose/modifiers';

export default function RoundedShapesExample() {
  return (
    <Host matchContents>
      <Row horizontalArrangement={{ spacedBy: 16 }} verticalAlignment="center">
        <Shape.Rectangle
          cornerRounding={16}
          smoothing={0.5}
          color="#9C27B0"
          modifiers={[size(100, 80)]}
        />
        <Shape.RoundedCorner
          cornerRadii={{ topStart: 20, topEnd: 20, bottomStart: 0, bottomEnd: 0 }}
          color="#FF5722"
          modifiers={[size(100, 80)]}
        />
      </Row>
    </Host>
  );
}
```

### 多边形和星形变体

使用 `verticesCount` 和 `innerRadius` 来控制形状几何。

```tsx PolygonShapesExample.tsx
import { Host, Shape, Row } from '@expo/ui/jetpack-compose';
import { size } from '@expo/ui/jetpack-compose/modifiers';

export default function PolygonShapesExample() {
  return (
    <Host matchContents>
      <Row horizontalArrangement={{ spacedBy: 16 }} verticalAlignment="center">
        <Shape.Polygon
          verticesCount={6}
          cornerRounding={4}
          color="#00BCD4"
          modifiers={[size(80, 80)]}
        />
        <Shape.Star
          verticesCount={8}
          innerRadius={0.4}
          cornerRounding={2}
          color="#FF9800"
          modifiers={[size(80, 80)]}
        />
        <Shape.PillStar
          verticesCount={6}
          innerRadius={0.5}
          color="#E91E63"
          modifiers={[size(80, 80)]}
        />
      </Row>
    </Host>
  );
}
```

## API

```tsx
import { Shape } from '@expo/ui/jetpack-compose';
```

<APISection packageName="expo-ui/jetpack-compose/shape" apiName="Shape" />
